fix: display disalignment create new component to import data instead of App

--- a/src/Container/Container.scss
+++ b/src/Container/Container.scss
@@ -7,6 +7,7 @@
   @include flexrow;
   margin:0.5rem;
   align-items: start;
+  justify-content: space-between;
 }
 
 .tagsContainer {
@@ -15,6 +16,7 @@
   margin: 0 1rem;
   overflow: hidden;
   height: 36px;
+  flex-grow: 1;
 }
 
 div .display {
